--- a/config/cmr/generic/config.json
+++ b/config/cmr/generic/config.json
@@ -1,4 +1,6 @@
 {
+    "module_label": "Nom du sous-module",
+    "module_desc": "Description du sous-module",
     "disclaimer" : false,
     "disclaimer_text": [],
     "welcome": "",
